# UNIRI_voxels

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: build.yml  doc.yml
.registry/: index.json
assets/models/: monu3.vox  test.vox  treeyuh.vox
assets/shaders/: colored_test.wgsl
content/common/: info.ron
content/common/materials/bark/: properties.ron
content/common/materials/clay/: properties.ron
content/common/materials/dirt/: properties.ron
content/common/materials/grass/: properties.ron
content/common/materials/iron/: properties.ron
content/common/materials/lava/: properties.ron
content/common/materials/moss/: properties.ron
content/common/materials/sand/: properties.ron
content/common/materials/silver/: properties.ron
content/common/materials/stone/: properties.ron
content/common/materials/wet_clay/: properties.ron
content/common/materials/wood/: properties.ron
content/common/materials/wool/: properties.ron
doc/: main.typ  template.typ  util.typ
doc/content/: oblici.typ  prakticni.typ  prijevremeno.typ  raytrace.typ  realno_vrijeme.typ  strukture.typ  usporedba.typ  uvod.typ
src/: arguments.rs  color.rs  convert.rs  data.rs  error.rs  ext.rs  main.rs  util.rs
src/entity/: mod.rs
src/entity/player/: fly_cam.rs  mod.rs
src/math/: aabb.rs  axis.rs  mat.rs  mod.rs  side.rs  vec.rs
src/ui/: debug.rs  hud.rs  main_menu.rs  mod.rs
src/world/: block.rs  info.rs  material.rs  mesh.rs  meta.rs  mod.rs  render.rs  vox.rs
src/world/chunk/: chunk_material.rs  chunk_shader.wgsl  mesh.rs  mod.rs  view.rs
