[workspace]
[package]
name = "voxelbox-bevy-dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.15"
bevy = { version = "0.10", features = [] }
bevy_common_assets = { version = "0.3", features = ["ron"] }

# Dev
dot_vox = "5.1"

wasmtime = "7.0"
texture_packer = "0.25"

# Data
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
rand = "0.8"
#bimap = "0.6"

paste = "1.0"

itertools = "0.10"
num = "0.4"

indexmap = "1.9"
ahash = "0.8"

noise = "0.8"
mlua = { version = "0.8", features = ["luau"] }

# System
dirs = "4.0"

# Logging & Errors
tracing = { version = "0.1", features = ["release_max_level_info", "log"] }
tracing-subscriber = "0.3"
thiserror = "1.0"
anyhow = "1.0"

# Util
derive_more = "0.99"

[features]
default = ["dev"]
dev = ["bevy/dynamic_linking"]
