[workspace]
[package]
name = "voxelbox-bevy-dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.19"
bevy = { version = "0.13" }
bevy_common_assets = { version = "0.10", features = ["ron"] }

clap = { version = "4.2", features = ["derive"] }

# Dev
dot_vox = "5.1"

texture_packer = "0.27"

# Data
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
rand = "0.8"
#bimap = "0.6"

paste = "1.0"

rayon = "1.10"
itertools = "0.12"
num = "0.4"

indexmap = "2.2"
ahash = "0.8"
nalgebra = "0.32"
ndarray = "0.15"

noise = "0.9"

# System
dirs = "5.0"

# Logging & Errors
tracing = { version = "0.1", features = ["release_max_level_info", "log"] }
tracing-subscriber = "0.3"
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.19"

# Util
derive_more = "0.99"
tt-call = "1.0"
tt-equal = "0.1"

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
#opt-level = "s"
lto = true
#codegen-units = 1

[features]
default = ["dev"]
dev = ["bevy/dynamic_linking"]
