[workspace]
[package]
name = "voxelbox-bevy-dev"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "0.20"
bevy_common_assets = { version = "0.10", features = ["ron"] }

clap = { version = "4.2", features = ["derive"] }

# Dev
dot_vox = "5.1"

texture_packer = "0.29"

# Data
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
rand = "0.8"
#bimap = "0.6"

paste = "1.0"

itertools = "0.13"
num = "0.4"

indexmap = "2.2"
ahash = "0.8"
ndarray = "0.15"

noise = "0.9"

# System
dirs = "5.0"

# Logging & Errors
tracing = { version = "0.1", features = ["release_max_level_info", "log"] }
tracing-subscriber = "0.3"
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.19"

# Util
derive_more = "0.99"
tt-call = "1.0"
tt-equal = "0.1"
maybe-owned = "0.3.4"

[dependencies.futures]
version = "0.3.30"
features = ["thread-pool"]

[dependencies.bevy]
version = "0.14"
default-features = false
features = [
    "animation",
    "bevy_asset",
    "bevy_state",
    "bevy_audio",
    "bevy_color",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    #"bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi_threaded",
    "png",
    "hdr",
    "vorbis",
    "x11",
    # "wayland",
    "bevy_gizmos",
    #"android_shared_stdcxx",
    "tonemapping_luts",
    "smaa_luts",
    "default_font", # debug font
    "webgl2",
    "sysinfo_plugin",
    "zlib"
]

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
#opt-level = "s"
lto = true
#codegen-units = 1

[features]
default = ["dev"]
dev = ["bevy/dynamic_linking"]
